--- a/nwHacks/src/templates/post_create.html
+++ b/nwHacks/src/templates/post_create.html
@@ -11,6 +11,7 @@
       {% csrf_token %}
      {{ form.as_p }}
   <input type ="submit" value="Create Post" />
+  <input type ="submit" name="cancel" value="Cancel" />
   </form>
 
 {% endblock content %}
