--- a/nwHacks/src/templates/base.html
+++ b/nwHacks/src/templates/base.html
@@ -53,6 +53,12 @@
     {% endblock content %}
 </div>
 
+<!--*********************************************************-->
+<!--*********************************************************-->
+<!--******************* GOOGLE MAPS *************************-->
+<!--*********************************************************-->
+<!--*********************************************************-->
+
 <div id="map"></div>
 <script>
       // Note: This example requires that you consent to location sharing when
@@ -75,8 +81,21 @@
               lng: position.coords.longitude
             };
 
-            infoWindow.setPosition(pos);
-            infoWindow.setContent('Location found.');
+            var marker = new google.maps.Marker({
+            position: pos,
+            map: map,
+            title: "I'm here"
+            });
+
+            var infowindow = new google.maps.InfoWindow({
+              content: "I am a query"});
+
+            marker.addListener('click',function() {
+             infowindow.open(map,marker);
+            });
+
+            //infoWindow.setPosition(pos);
+            //infoWindow.setContent('Location found.');
             map.setCenter(pos);
           }, function() {
             handleLocationError(true, infoWindow, map.getCenter());
