Add homepage link to persistent title

--- a/nwHacks/src/templates/base.html
+++ b/nwHacks/src/templates/base.html
@@ -8,8 +8,8 @@
 
 
 <div class = 'container'>
+    <h1><a href="/posts">Study Buddy</a></h1>
     {% block content %}
-    <h1>Thirsty for Study</h1>
     {% if messages %}
     {% for message in messages %}
     {{ message }}
