added deleting expired post functionality and modified datetime field

--- a/nwHacks/src/templates/post_create.html
+++ b/nwHacks/src/templates/post_create.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
-
+<script type="text/javascript" src="/my_admin/jsi18n/"></script>
+<script type="text/javascript" src="/media/admin/js/core.js"></script>
 <!-- template inheritance, replace block content from parent template -->
 <!-- can also call {{ block.super }} to have parent content display as well -->
 {% block content %}
