added timestamp to comments

--- a/nwHacks/src/templates/post_detail.html
+++ b/nwHacks/src/templates/post_detail.html
@@ -19,6 +19,7 @@
     <h1>Comment Section</h1>
     {% for comment in comments %}
         <p>{{ comment.content }}</p>
+        <p>{{ comment.timestamp }}</p><br>
     {% endfor %}
 
 
