--- a/nwHacks/src/templates/post_detail.html
+++ b/nwHacks/src/templates/post_detail.html
@@ -15,6 +15,7 @@
     <button><a href="modify/" style="text-decoration:none;"> modify post </a></button>
     <button><a href="delete/" style="text-decoration:none;"> delete post </a></button>
     <button><a href="comment/" style="text-decoration:none;"> post comment </a></button>
+    <button><a href="attend/" style="text-decoration:none;"> attend </a></button>
 
     <h1>Comment Section</h1>
     {% for comment in comments %}
