--- a/nwHacks/src/templates/base.html
+++ b/nwHacks/src/templates/base.html
@@ -71,7 +71,7 @@
       function initMap() {
         var map = new google.maps.Map(document.getElementById('map'), {
           center: {lat: 49.2827, lng: 123.1207},
-          zoom: 12
+          zoom: 15
         });
         var infoWindow = new google.maps.InfoWindow({map: map});
         // Try HTML5 geolocation.
@@ -114,15 +114,26 @@
       function plotAllGeoLocations(map) {
         var filteredLats = {{ post_lats|safe }}
         var filteredLongs = {{ post_longs|safe }}
+        var infos = {{post_info|safe}}
         for (var i = 0; i < filteredLats.length; i++) {
-            var marker = new google.maps.Marker({
-                position: {lat: filteredLats[i], lng: filteredLongs[i]},
-                map: map,
-            });
+            var markerLatLng = new google.maps.LatLng(filteredLats[i], filteredLongs[i]);
+            createMarker(markerLatLng, infos[i],map);
         }
       }
 
+      function createMarker(latlon, infocontent,map){
+        var marker = new google.maps.Marker({
+                 position: latlon,
+                 map: map
+        });
+        var infoWindow = new google.maps.InfoWindow({
+           content: infocontent
+        });
+        marker.addListener('click',function() {
+           infoWindow.open(map,marker);
+        });
 
+      }
 
       function handleLocationError(browserHasGeolocation, infoWindow, pos) {
         infoWindow.setPosition(pos);
