--- a/nwHacks/src/templates/comment_create.html
+++ b/nwHacks/src/templates/comment_create.html
@@ -3,7 +3,7 @@
 <!-- template inheritance, replace block content from parent template -->
 <!-- can also call {{ block.super }} to have parent content display as well -->
 {% block content %}
-  <h1>Create a post</h1>
+  <h1>Post a comment</h1>
 
   <!-- select form method to be POST, default method is GET for forms -->
   <form method="POST" action="">
