--- a/nwHacks/src/templates/base.html
+++ b/nwHacks/src/templates/base.html
@@ -25,8 +25,10 @@
         <h2>Welcome, {{ user.username }}</h2>
         <a href="logout/">Logout</a>
     {% else %}
-        <a href="login/">Login</a> or <a href="register/">Register
+        <a href="login/">Login</a> or <a href="register/">Register</a>
     {% endif %}
+
+    <p></p>
 
    
     {% block content %}
@@ -35,10 +37,12 @@
     {{ message }}
     {% endfor %}
     {% endif %}
+    <p></p>
     <form method ="GET" action="">
         <input type="text" name="q" placeholder="Search Posts" value="{% if query %}{{ query }}{% endif %}"/>
         <input type="submit" value="Search"/>
     </form>
+    <p></p>
     <table border="1">
         <tr>
             <th>Course</th>
@@ -66,6 +70,7 @@
     {% endblock content %}
 </div>
 
+<p></p>
 <!--*********************************************************-->
 <!--*********************************************************-->
 <!--******************* GOOGLE MAPS *************************-->
