--- a/nwHacks/src/templates/base.html
+++ b/nwHacks/src/templates/base.html
@@ -125,7 +125,7 @@
             center: {lat: 49.2827, lng: 123.1207},
             zoom: 15
         });
-        var infoWindow = new google.maps.InfoWindow({map: map});
+        //var infoWindow = new google.maps.InfoWindow({map: map});
         // Try HTML5 geolocation.
         if (navigator.geolocation) {
             navigator.geolocation.getCurrentPosition(function(position) {
