--- a/nwHacks/src/templates/register.html
+++ b/nwHacks/src/templates/register.html
@@ -1,28 +1,85 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <meta charset="UTF-8">
+        <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+
+		<!-- bootstrap.min -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+
+        <!--Google Fonts-->
+        <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+
+        <!-- Main jQuery -->
+        <script src="js/jquery-1.11.1.min.js"></script>
+		<!-- Twitter Bootstrap -->
+        <script src="js/bootstrap.min.js"></script>
+
+        <style>
+            .register-bg {
+
+            }
+            .register {
+            font-family: 'Montserrat', sans-serif;
+            font-size: 16px;
+            font-color: #000;
+            text-transform: uppercase;
+            text-align: center;
+            margin-top: 10%;
+            }
+            .register h2 {
+            font-family: 'Montserrat', sans-serif;
+            font-size: 50px;
+            text-transform: uppercase;
+            text-align: center;
+            padding-bottom: 50px;
+            }
+            .btn-custom input {
+            background-color: #fff;
+            text-transform: uppercase;
+            border-color: #000;
+            border-radius: 8px;
+            }
+            .form-row {
+            padding-top: 20px;
+            padding-bottom: 20px;
+            }
+        </style>
     <title>Register a New User</title>
+    </head>
 
     <body>
+    <div class = "register-bg">
+        <div class="register">
+            <h2>Please Register</h2>
         <form id="register" method="post">
-
+        {% load bootstrap %}
             {% csrf_token %}
 
-            <div>
+            <div class="form-row">
               {{ form.username.errors }}
-              {{ form.username.label_tag }} {{ form.username }}
-            </div>
-            <div>
-              {{ form.password1.errors }}
-              {{ form.password1.label_tag }} {{ form.password1 }}
-            </div>
-            <div>
-              {{ form.password2.errors }}
-              {{ form.password2.label_tag }} {{ form.password2 }}
+              {{ form.username|bootstrap_horizontal }}
             </div>
 
-            <br/>
-            <input type="submit" name="submit" value="Register" />
+            <div class="form-row">
+              {{ form.password1.errors }}
+              {{ form.password1|bootstrap_horizontal }}
+            </div>
+
+            <div class="form-row">
+              {{ form.password2.errors }}
+              {{ form.password2|bootstrap_horizontal }}
+            </div>
+            <div class="btn-custom">
+                <div class="col-md-8 col-md-offset-2">
+                    <input type="submit" name="submit" value="Register" />
+                </div>
+            </div>
+
         </form>
+        </div>
+    </div>
+
 
     </body>
 </html>
