--- a/nwHacks/src/templates/login.html
+++ b/nwHacks/src/templates/login.html
@@ -1,41 +1,44 @@
 
 <!DOCTYPE html>
 <html>
-    <head><link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous"></head>
-    <title>Login</title>
-    <style>
-        html, body {
-            height: 100%;
-            width: 700px;
-            margin: 0 auto;
-            padding: 75px 75px 0px 75px;
-        }
-        #map {
-            height: 100%;
-        }
-    </style>
+<head><link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous"></head>
+<title>Login</title>
+<style>
+    html, body {
+        height: 100%;
+        width: 700px;
+        margin: 0 auto;
+        padding: 75px 75px 0px 75px;
+    }
+    #map {
+        height: 100%;
+    }
+</style>
 
-    <body>
-    <h2>Please sign in</h2>
-        <form id="login_form" method="post">
+<body>
+<h2>Please sign in</h2>
+<form id="login_form" method="post">
 
-          {% csrf_token %}
+    {% csrf_token %}
 
-          <div class="form-row">
-            {{ form.username.errors }}
-            {{ form.username.label_tag }} {{ form.username }}
-          </div>
-          <div class="form-row">
-            {{ form.password.errors }}
-            {{ form.password.label_tag }} {{ form.password }}
-            <input type="hidden" name="next" value="{{ next }}" />
-          </div>
+    <div class="form-row">
+        {{ form.username.errors }}
+        {{ form.username.label_tag }} {{ form.username }}
+    </div>
+    <div class="form-row">
+        {{ form.password.errors }}
+        {{ form.password.label_tag }} {{ form.password }}
+        <input type="hidden" name="next" value="{{ next }}" />
+    </div>
 
-          <br/>
-          <input type="submit" name="submit" value="Login" />
-        </form>
+    <br/>
+    <input type="submit" name="submit" value="Login" />
+</form>
+<form action="..">
+    <input type="submit" value="Cancel">
+</form>
 
-        <a href="../register">Register</a>
-    </body>
+<a href="../register">Register</a>
+</body>
 </html>
 
