--- a/nwHacks/src/templates/logout.html
+++ b/nwHacks/src/templates/logout.html
@@ -45,6 +45,9 @@
             font-size: 20px;
             color: #000;
             }
+            .btn-custom:hover {
+            background-color: #FF0000;
+            }
         </style>
 
         <title>Logout</title>
